--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
 :root {
 	font-family: 'Noto Sans', sans-serif;
 	font-size: 16px;
-	--bg-primary-color: ;
+	--bg-primary-color: #1e232b;
 	--bg-secondary-color: #3b3f46;
 	--header-bg-primary-color: #f8a404;
 	--text-primary-color: whitesmoke;
@@ -126,16 +126,35 @@ section p {
 header {
 	width: auto;
 	margin: 0;
-	background-color: var(--header-bg-primary-color);
+	background-color: var(--bg-primary-color);
 	padding-left: 1rem;
 	height: 100vh;
+	display:flex;
+}
+
+header img {
+	/* transform: scale(1.5, 1.5); */
+	margin-top: 1rem;
+	margin-left: 1rem;
+}
+
+header div {
+	flex-grow:1;
+	display:flex;
+	align-items:center;
+}
+
+header section {
+	margin-left:5rem;
+	display: flex;
+	align-items:center;
 }
 
 div.header {
 	width: 100%;
 	margin: 0;
 	height: 35vh;
-	background-color: var(--header-bg-primary-color);
+	background-color: var(--bg-secondary-color);
 }
 
 .accordion-button, 
