--- a/src/styles.css
+++ b/src/styles.css
@@ -142,12 +142,18 @@ header div {
 	flex-grow:1;
 	display:flex;
 	align-items:center;
+	justify-content:center;
 }
 
 header section {
-	margin-left:5rem;
+	flex-grow:1;
 	display: flex;
 	align-items:center;
+	justify-content:center;
+}
+
+header section h1 {
+	font-size:3rem;
 }
 
 div.header {
