--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,6 @@
 	--text-secondary-color: #3b3f46;
 	--button-primary-color: var(--header-bg-primary-color);
 	--button-secondary-color: #fcb736;
-	
 }
 
 body {
@@ -119,6 +118,44 @@ section p {
 	margin: 1rem;
 }
 
+main.what-we-learned>section:nth-child(odd) {
+	height: 50vh;
+	display: flex;
+	flex-basis: 0;
+	flex-grow: 1;
+	align-items: center;
+}
+
+main.what-we-learned>section:nth-child(even) {
+	height: 50vh;
+	display: flex;
+	flex-basis: 0;
+	flex-grow: 1;
+	align-items: center;
+	background: var(--header-bg-primary-color);
+}
+
+main.what-we-learned>section:nth-child(even)>div.info {
+	padding-left: 2rem;
+}
+
+main.what-we-learned>section>div.title {
+	font-size: 3rem;
+}
+
+main.what-we-learned>section>div.info {
+	font-size: 1.5rem;
+}
+
+main.what-we-learned>section>div {
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
 main.faq {
 	height: 100vh;
 	display: flex;
@@ -200,6 +237,64 @@ main.faq div.header img {
 main.faq div.header {
 	overflow: hidden;
 }
+
+main>section.advertisments {
+	height: 100vh;
+	display: flex;
+	flex-basis: 0;
+	flex-grow: 1;
+	align-items: center;
+}
+
+main>section.advertisments>section {
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+}
+
+main>section.advertisments>section>div.caption {
+	border-bottom: 1px solid white;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+    max-width: 75%;
+}
+
+main>section.advertisments>section>div.caption>h1 {
+	font-size: 3rem;
+}
+
+main>section.advertisments>div.video-preview {
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+}
+
+main>section.advertisments>div.video-preview>.advertisment-video {
+	display:none;
+}
+
+main>section.advertisments>div.video-preview>button.left{
+	margin-right: 1rem;
+	background-color: var(--bg-primary-color);
+	font-size: 2rem;
+	color: var(--header-bg-primary-color);
+}
+
+main>section.advertisments>div.video-preview>button.right {
+	margin-left: 1rem;
+	background-color: var(--bg-primary-color);
+	font-size: 2rem;
+	color: var(--header-bg-primary-color);
+}
+
+
+main>section.advertisments>div.video-preview>button.left:hover, 
+main>section.advertisments>div.video-preview>button.right:hover {
+	color: var(--text-primary-color);
+}
+
 
 main>section.preview {
 	height: 100vh;
